# survey-calling-voice-agent

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent.py  agentcli.py  cerebrium.toml  instructions.py  main.py  project-structure.md  prompter.py  pyproject.toml  requirements.txt  runner.py  sarvam_agent.py  universal_agent.py
call_utils/: README.md  batch_calls.py  dispatch_with_metadata.py  dispatch_with_supabase.py  join_room.py  make_call.py
configbuilder/streamlit/: README.md  agent_config_builder.py
configs/: webhook_tool_example.json
configs/development/: clinic_receptionist.json  default.json  survey_agent.json  test_agent.json
configs/templates/: sales_agent.json  survey_agent.json
docs/: FIRE_AND_FORGET_TOOLS.md  IMPLEMENTATION_PLAN.md  INSTRUCTION_TEMPLATE_GUIDE.md  PHASE_1_1_COMPLETE.md  PHASE_1_2_COMPLETE.md  PHASE_1_3_COMPLETE.md  backend.md  project-structure.md  prompting_guide.md  webhook_tools.md
example/: agent.py  instructions.py  sarvam_agent.py
example/configs/: clinic_receptionist.json
scripts/: test_component_factory.py  test_configurable_agent.py  validate_configs.py
src/: __init__.py
src/agents/: __init__.py  configurable_agent.py  entrypoint.py
src/components/: __init__.py  factory.py
src/core/: __init__.py  config.py  config_loader.py  instruction_template.py
src/prompts/: __init__.py
tests/: test_component_factory.py  test_config.py  test_configurable_agent.py  test_webhook_tools.py
universalagent/: __init__.py
universalagent/agents/: __init__.py  configurable_agent.py  entrypoint.py  metadata.py  (+1 more)
(+38 files in other folders)
